init.log
/home/sumanth/projects/orderManagementSystem/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/scripts/initAdmin.ts(1,8): error TS2300: Duplicate identifier 'mongoose'.
src/scripts/initAdmin.ts(6,8): error TS2300: Duplicate identifier 'mongoose'.

    at createTSError (/home/sumanth/projects/orderManagementSystem/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/sumanth/projects/orderManagementSystem/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/sumanth/projects/orderManagementSystem/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/sumanth/projects/orderManagementSystem/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/sumanth/projects/orderManagementSystem/backend/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1839:10)
    at Object.require.extensions.<computed> [as .ts] (/home/sumanth/projects/orderManagementSystem/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2300, 2300 ]
}
